Adjustments to div padding classes

--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">About</a>
+              <a
+                class="nav-link"
+                href="https://stoneneedle.github.io/about.html"
+                >About</a
+              >
             </li>
           </ul>
         </div>
